--- a/config/config.yml.dist
+++ b/config/config.yml.dist
@@ -4,7 +4,35 @@ options:
         slug: example-options
         fields:
             -
-                name: 'First option!'
-                slug: option-first
-                value: 'Hello world!'
+                name: 'Text option'
+                slug: text-field
+                value: 'Hello textfield!'
                 type: text
+            -
+                name: 'Textarea option'
+                slug: text-area
+                value: "Hello textarea!"
+                type: textarea
+            -
+                name: 'Select option'
+                slug: select-option
+                value: "First option"
+                type: select
+                options:
+                    - "First option"
+                    - "Second option"
+                    - "Third option"
+            -
+                name: 'Date option'
+                slug: date-field
+                value: '2016-12-22'
+                type: date
+    -
+        name: 'More options'
+        slug: options-more
+        fields:
+            -
+                name: 'Another date option'
+                slug: date-field
+                value: '2016-12-22'
+                type: date
