corrected the slug for the 'Another date option'

--- a/config/config.yml.dist
+++ b/config/config.yml.dist
@@ -33,6 +33,6 @@ options:
         fields:
             -
                 name: 'Another date option'
-                slug: date-field
+                slug: another-date-field
                 value: '2016-12-22'
                 type: date
