added another screenshot for showing how the options are configured

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "bolt-assets": "web",
         "bolt-class": "Bolt\\Extension\\Snijder\\BoltUIOptions\\BoltUIOptionsExtension",
         "bolt-screenshots": [
-            "assets/screenshots/main-options.png"
+            "assets/screenshots/main-options.png",
+            "assets/screenshots/setting-yml.png"
         ]
     }
 }
