added color picker example to the config.yml.dist

--- a/config/config.yml.dist
+++ b/config/config.yml.dist
@@ -36,6 +36,11 @@ ui-options:
                 slug: another-date-field
                 value: '2016-12-22'
                 type: date
+            -
+                name: 'Color option'
+                slug: color-field
+                value: '#f00'
+                type: color
 
 
 
