--- a/config/config.yml.dist
+++ b/config/config.yml.dist
@@ -23,6 +23,15 @@ ui-options:
                     - "Second option"
                     - "Third option"
             -
+                name: 'Radio option'
+                slug: radio-option
+                value: "First option"
+                type: radio
+                options:
+                    - "First option"
+                    - "Second option"
+                    - "Third option"
+            -
                 name: 'Date option'
                 slug: date-field
                 value: '2016-12-22'
