added number field

--- a/config/config.yml.dist
+++ b/config/config.yml.dist
@@ -9,6 +9,11 @@ ui-options:
                 value: 'Hello textfield!'
                 type: text
             -
+                name: 'Number option'
+                slug: number-field
+                value: 1337
+                type: number
+            -
                 name: 'Textarea option'
                 slug: text-area
                 value: "Hello textarea!"
